# tbpn-size-gong-analysis

./: .coverage  .cursorignore  .cursorrules  .gitignore  Brewfile  DEVELOPMENT_GUIDE.md  INSTALL.md  INVENTORY.md  README.md  debug_bulk_download.py  example_usage.py  notes_self.txt  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
config/: __init__.py  settings.py
data/: __init__.py
data/csv_clean/: csv_generator_master.xlsx
docs/: BATCH_LUFS_IMPLEMENTATION.md  GITIGNORE_UPDATE.md  REFACTORING_PLAN.md  STRUCTURE_MIGRATION.md  decision_pathing.md
gong_detector/: FOLDER_STRUCTURE.md  QUICK_START.md  __init__.py  audio_utils_demo.py  batch_detect.py  bulk_process.py  compare_spectrograms.py  convert_audio.py  demo.py  detect.py  detector.py  export_snippets.py  requirements.txt  test_yamnet.py  yamnet_runner.py
gong_detector/core/: __init__.py  audio_utils.py  bulk_process.py  comprehensive_csv.py  convert_audio.py  detect_from_youtube.py  manual_sample_collector.py  negative_sample_collector.py  results_utils.py  yamnet_runner.py  youtube_utils.py
gong_detector/core/detector/: yamnet_runner.py
gong_detector/core/pipeline/: bulk_processor.py  detection_pipeline.py
gong_detector/core/training/: manual_collector.py  negative_collector.py
gong_detector/core/utils/: __init__.py
gong_detector/legacy/: README_spectrogram_comparison.md  __init__.py  create_test_audio.py  example_usage.py  extract_youtube_segment.py
gong_detector/training/: README.md  __init__.py  validation_timestamps.txt
gong_detector/training/scripts/: evaluate_model.py  extract_embeddings.py  train_classifier.py
legacy/: __init__.py  create_test_audio.py  example_usage.py
legacy/analysis/: compare_spectrograms.py
legacy/docs/: FOLDER_STRUCTURE.md
legacy/examples/: example_usage.py  extract_youtube_segment.py
notebooks/charts/: 10_gong_hits_strip.py  11_loudest_episodes_strip.py  12a_daily_videos_timeline.py  12b_total_gongs_barchart.py  12c_watching_patterns_heatmap.py  13_greatest_hits.py  1_the_results.py  2_loudness_boxplot.py  3_funding_boxplot.py  5_sitting_barchart.py  6_funding_barchart.py  7_sitting_stripchart.py  8_all_results.py  8a_all_results.py  9_daily_gong_hits.py  final_charts.ipynb  test_charts.ipynb
scripts/: backfill_raw_cache.py  debug_bulk_download.py  downsample_raw_cache.py  extract_tbpn_links.py  migrate_raw_cache_to_wav.py  setup_dev.py  update_index_for_wav.py  update_tbpn_links.sh
src/: __init__.py
src/gong_detector/: QUICK_START.md  __init__.py  run_gong_detector.py
src/gong_detector/core/: __init__.py
src/gong_detector/core/data/: __init__.py  csv_manager.py  tbpn_youtube_links.txt
src/gong_detector/core/detector/: __init__.py  yamnet_runner.py
src/gong_detector/core/pipeline/: __init__.py  bulk_processor.py  detection_pipeline.py
src/gong_detector/core/training/: __init__.py  manual_collector.py  negative_collector.py
src/gong_detector/core/utils/: __init__.py  audio_utils.py  audio_utils_documentation.md  convert_audio.py  file_utils.py  local_media.py  results_utils.py  youtube_utils.py
src/gong_detector/core/utils/loudness/: __init__.py  batch_processor.py  lufs_analyzer.py  true_peak_analyzer.py  unified_analyzer.py
src/gong_detector/core/utils/youtube/: __init__.py  audio_processor.py  cache_manager.py  downloader.py  metadata_utils.py
src/gong_detector/training/: README.md  __init__.py
tests/: __init__.py  conftest.py  evaluate_model.py  extract_embeddings.py  requirements-ci.txt  test_audio_utils.py  test_basic.py  test_compare_spectrograms.py  test_convert_audio.py  test_detect_from_youtube.py  test_detect_from_youtube_positive_samples.py  test_gong_detector.py  test_project_structure.py  test_temp_audio_migration.py  test_video_title_organization.py  test_yamnet_runner.py  train_classifier.py
tests/unit/: test_csv_manager_minimal.py
